--- a/README.Rmd
+++ b/README.Rmd
@@ -72,13 +72,13 @@ Sample = (nrow(X) - 1)/nrow(X)*cov(X)
 GLASSO(S = Sample, lam = 0.5)
 
 # GLASSO cross validation
-GLASSO(X, lam = 10^seq(-5, 5, 0.5))
+GLASSO(X)
 
 # produce CV heat map for GLASSO
-GLASSO = GLASSO(X, lam = 10^seq(-5, 5, 0.01))
+GLASSO = GLASSO(X)
 GLASSO %>% plot
 
 # produce line graph for CV errors for GLASSO
-GLASSO %>% plot(type = "line")
+GLASSO %>% plot(type = "heatmap")
 
 ```
