--- a/README.Rmd
+++ b/README.Rmd
@@ -8,19 +8,9 @@ output: github_document
 knitr::opts_chunk$set(echo = TRUE)
 ```
 
-
-See [manual](https://github.com/MGallow/GLASSO/blob/master/GLASSOO.pdf).
+[![CRAN_Status_Badge](http://www.r-pkg.org/badges/version/GLASSOO)](https://cran.r-project.org/package=GLASSOO)
 
 ## Overview
-
-<br>\vspace{0.5cm}
-
-<p align="center">
-  <img src="lik.gif">
-</p>
-
-<br>\vspace{0.5cm}
-
 
 `GLASSO` is an R package that estimates a penalized precision matrix via block-wise coordinate descent -- also known as the graphical lasso (glasso) algorithm. A (possibly incomplete) list of functions contained in the package can be found below:
 
@@ -28,6 +18,7 @@ See [manual](https://github.com/MGallow/GLASSO/blob/master/GLASSOO.pdf).
 
 * `plot.GLASSO()` produces a heat map or line graph for cross validation errors
 
+See [vignette](https://mgallow.github.io/GLASSOO/) or [manual](https://github.com/MGallow/GLASSOO/blob/master/GLASSOO.pdf).
 
 ## Installation
 
@@ -54,9 +45,10 @@ for (i in 1:5){
 }
 
 # print oracle precision matrix (shrinkage might be useful)
-(Omega = qr.solve(S) %>% round(3))
+(Omega = round(qr.solve(S), 3))
 
-# generate 1000 x 5 matrix with rows drawn from iid N_p(0, S)
+# generate 100 x 5 matrix with rows drawn from iid N_p(0, S)
+set.seed(123)
 Z = matrix(rnorm(100*5), nrow = 100, ncol = 5)
 out = eigen(S, symmetric = TRUE)
 S.sqrt = out$vectors %*% diag(out$values^0.5) %*% t(out$vectors)
@@ -66,19 +58,18 @@ X = Z %*% S.sqrt
 Sample = (nrow(X) - 1)/nrow(X)*cov(X)
 
 # print sample precision matrix (perhaps a bad estimate)
-(qr.solve(cov(X)) %>% round(5))
+round(qr.solve(cov(X)), 5)
 
 # GLASSO (lam = 0.5)
 GLASSO(S = Sample, lam = 0.5)
 
 # GLASSO cross validation
-GLASSO(X)
-
-# produce CV heat map for GLASSO
-GLASSO = GLASSO(X)
-GLASSO %>% plot
+(GLASSO = GLASSO(X))
 
 # produce line graph for CV errors for GLASSO
-GLASSO %>% plot(type = "heatmap")
+plot(GLASSO)
+
+# produce CV heat map for GLASSO
+plot(GLASSO, type = "heatmap")
 
 ```
