--- a/README.Rmd
+++ b/README.Rmd
@@ -28,7 +28,7 @@ See [vignette](https://mgallow.github.io/GLASSOO/) or [manual](https://github.co
 devtools::install_github("MGallow/GLASSOO")
 ```
 
-If there are any issues/bugs, please let me know: [github](https://github.com/MGallow/GLASSOO/issues). You can also contact me via my [website](http://users.stat.umn.edu/~gall0441/). Pull requests are welcome!
+If there are any issues/bugs, please let me know: [github](https://github.com/MGallow/GLASSOO/issues). You can also contact me via my [website](https://mgallow.github.io/). Pull requests are welcome!
 
 ## Usage
 
