--- a/README.Rmd
+++ b/README.Rmd
@@ -13,7 +13,11 @@ knitr::opts_chunk$set(echo = TRUE)
 
 ## Overview
 
-`GLASSO` is an R package that estimates a penalized precision matrix via block-wise coordinate descent -- also known as the graphical lasso (glasso) algorithm. A (possibly incomplete) list of functions contained in the package can be found below:
+<center>
+![](https://github.com/MGallow/GLASSOO/raw/master/vignettes/images/gif.gif)
+</center>
+
+`GLASSOO` is an R package that estimates a lasso-penalized precision matrix via block-wise coordinate descent -- also known as the graphical lasso (glasso) algorithm. This package is similar to [CVglasso](https://mgallow.github.io/CVglasso/) -- but rather than being a wrapper around the [glasso](https://cran.r-project.org/web/packages/glasso/index.html) package, the code is completely re-written in C++. A (possibly incomplete) list of functions contained in the package can be found below:
 
 * `GLASSO()` computes the estimated precision matrix
 
